<resources>
    <string name="app_name">Calculation Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_fragment_presentation">ИГРА СЧЕТ</string>
    <string name="textGame">Заявление Определением Арбитражного суда города Москвы от 10 июля 2024
        года (резолютивная часть оглашена 03 июня 2024 года) признаны погашенными требования
        кредиторов, включенных в Реестр требований кредиторов и прекращено производство
        по делу №А40–35989/21-71-104 ИП о признании ИП Ручкина Игоря Алексеевича несостоятельным
        (банкротом). Сведения о прекращении производства по делу о банкротстве согласно пункту 2
        статьи 213.7 Федерального закона «О несостоятельности (банкротстве)» подлежат обязательному
        опубликованию в Едином федеральном реестре сведений о банкротстве. Финансовый управляющий
        данные сведения не публикует, на обращения не реагорует. В целях защиты моих прав и законных
        интересов, суд вынес решение о прекращение банкротства, но финансовый управляющий не
        размещает информацию на сайте Единого федерального реестра сведений о банкротстве, что нужно
        делать, чтобы разблокировать банковские счета В Центральный Банк РФ от Ручкина Игоря Алексеевича,
        адрес………. Заявление Определением Арбитражного суда города Москвы от 10 июля 2024 года
        (резолютивная часть оглашена 03 июня 2024 года) признаны погашенными требования кредиторов,
        включенных в Реестр требований кредиторов и прекращено производство по делу №А40-35989/21-71-104
        ИП о признании ИП Ручкина Игоря Алексеевича несостоятельным (банкротом). Сведения о прекращении
        производства по делу о банкротстве согласно пункту 2 статьи 213.7 Федерального закона
        «О несостоятельности (банкротстве)» подлежат обязательному опубликованию в Едином федеральном
        реестре сведений о банкротстве. Финансовый управляющий данные сведения не публикует, на обращения
        не реагорует. В целях защиты моих прав и законных интересов, ПРОШУ: 1. Опубликовать в ЕФРСБ
        сведения о прекращении производства по делу №А40-35989/21-71-104 ИП о признании ИП Ручкина Игоря
        Алексеевича несостоятельным (банкротом). суд вынес решение о прекращение банкротства,
        но финансовый управляющий не размещает информацию на сайте Единого федерального реестра сведений
        о банкротстве, что нужно делать, чтобы разблокировать банковские счета В Центральный Банк РФ от
        Ручкина Игоря Алексеевича, адрес………. Заявление Определением Арбитражного суда города Москвы от
        10 июля 2024 года (резолютивная часть оглашена 03 июня 2024 года) признаны погашенными требования
        кредиторов, включенных в Реестр требований кредиторов и прекращено производство по делу №А40-35989/21-71-104
        ИП о признании ИП Ручкина Игоря Алексеевича несостоятельным (банкротом). Сведения о прекращении
        производства по делу о банкротстве согласно пункту 2 статьи 213.7 Федерального закона
        «О несостоятельности (банкротстве)» подлежат обязательному опубликованию в Едином федеральном
        реестре сведений о банкротстве. Финансовый управляющий данные сведения не публикует, на обращения
        не реагорует. В целях защиты моих прав и законных интересов, ПРОШУ: 1. Опубликовать в ЕФРСБ сведения
        о прекращении производства по делу №А40-35989/21-71-104 ИП о признании ИП Ручкина Игоря Алексеевича
        несостоятельным (банкротом).</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Select_level_Game">Выбор уровня игры</string>
    <string name="level_hard">тяжелый</string>
    <string name="level_average">средний</string>
    <string name="level_ease">легкий</string>
    <string name="level_test">тест</string>
    <string name="question">\?</string>
    <string name="minCountAnswer"> минимальное количество правильных ответов- %s </string>
    <string name="CountAnswer">количество правильных ответов- %s </string>
</resources>