<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.FragmentSelectLevel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitleSelectLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/fon_my"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Select_level_Game"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/fon_my_lime"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/level_test"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvEase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/fon_my_yellow"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/level_ease"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvAverage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/fon_my_gold"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/level_average"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/fon_my_red"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/level_hard"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>